Pass clickEvent to controlElement inside label if target node can't start selection.

On selection of any text in the HTML content, if any of the image
in a label is clicked, radio input is not selected.

This CL fixes this issue, the click events were not getting passed
to the control elements, as for few elements like image, update
selection is not done on single click as |CanMouseDownStartSelect()|
returns false. So this CL checks whether a selection could be done
on an element inside label.

BUG=637516
TEST=run_layout_test fast/forms/label/label-selection-by-textSelection-and-click.html

Review-Url: https://codereview.chromium.org/2833313003
Cr-Commit-Position: refs/heads/master@{#473151}

Former-commit-id: 5db23fe6d7151affeaf8b84ac2b16cf1603c456d